# Sophies-Fly-Plotter

./: .gitignore  .mega-linter.yaml  README.md  main.py  pyproject.toml  requirements.txt  sophie-code.py  test.py
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: Deployment.yaml  mega-linter.yaml
sophie_fly_plotter/: main.py
trajectories/: dead_flies_trajectories.csv  grouptrajectories.csv  trajectories.csv  trajectories_example.csv
