[project]
name = "sophie-fly-plotter"
version = "0.1.0"
description = ""
authors = [
    {name = "Scott Gibb",email = "smgibb@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "tk (>=0.1.0,<0.2.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
